--- a/assets/sass/base/_page.scss
+++ b/assets/sass/base/_page.scss
@@ -25,9 +25,9 @@
 
 	body {
 		background-color: _palette(bg);
-        @include background-image("images/background_image.jpg");
-        //@include vendor('background-image', (
-		    //'url("images/background_image.jpg")', 
+        //@include background-image("images/background_image.jpg");
+        @include vendor('background-image', (
+		    'url("images/background_image.jpg")', 
 			//'url("images/overlay.png")',
 		//	'linear-gradient(45deg, #{_palette(bg1)} 15%, #{_palette(bg2) 85%})',
 		//));
