add background image

--- a/assets/sass/base/_page.scss
+++ b/assets/sass/base/_page.scss
@@ -30,7 +30,7 @@
 		    'url("images/background_image.jpg")', 
 			//'url("images/overlay.png")',
 		//	'linear-gradient(45deg, #{_palette(bg1)} 15%, #{_palette(bg2) 85%})',
-		//));
+		));
 
 		// Prevents animation/transition "flicker" on page load.
 		// Automatically added/removed by js/main.js.
